--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,29 @@
 {
-    "builds": [{ "src": "index.html", "use": "@vercel/static" }],
-    "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
-}
+    "version": 2,
+    "public": "public",
+    "builds": [
+      {
+        "src": "index.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "public/**/*",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/css/(.*)",
+        "dest": "/public/css/$1"
+      },
+      {
+        "src": "/images/(.*)",
+        "dest": "/public/images/$1"
+      },
+      {
+        "src": "/js/(.*)",
+        "dest": "/public/js/$1"
+      }
+    ]
+  }
+  
