--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,14 @@
 {
     "version": 2,
-    "public": "public",
+    "public": true, 
     "builds": [
       {
         "src": "index.html",
         "use": "@vercel/static"
-      },
-      {
-        "src": "public/**/*",
-        "use": "@vercel/static"
       }
     ],
     "routes": [
-      {
-        "src": "/css/(.*)",
-        "dest": "/public/css/$1"
-      },
-      {
-        "src": "/images/(.*)",
-        "dest": "/public/images/$1"
-      },
-      {
-        "src": "/js/(.*)",
-        "dest": "/public/js/$1"
-      }
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
   
