--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
     "version": 2,
-    "public": true, 
-    "builds": [
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+    "public": true,
+    "builds": [{ "src": "public/**/*", "use": "@vercel/static" }],
+    "routes": [{ "src": "/(.*)", "dest": "/public/index.html" }]
   }
   
