--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
     "builds": [{ "src": "public/**/*", "use": "@vercel/static" }],
     "routes": [
         { "src": "/(.*)", "dest": "/public/index.html" },
-        { "src": "/css/(.*)", "dest": "/public/css/$1" }
+        { "src": "/css/(.*)", "dest": "/public/css/$1" },
+        { "src": "/images/(.*)", "dest": "/public/images/$1" }
     ]
 }
   
